# ForgePPT

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  claude.md  docker-compose.yml  opencode.json
python_worker/: Dockerfile  config.py  entrypoint.sh  pyproject.toml  requirements.txt
python_worker/agent_platform/: __init__.py
python_worker/agent_platform/context/: __init__.py  builders.py  digests.py  models.py
python_worker/agent_platform/memory/: __init__.py  episodic.py  manager.py  models.py  working.py
python_worker/agent_platform/memory/stores/: __init__.py  qdrant_store.py  sqlite_store.py
python_worker/agent_platform/orchestration/: __init__.py  agent_graph.py  merge_graph.py  plans.py  role_registry.py  runner.py  state.py
python_worker/agent_platform/orchestration/nodes/: __init__.py  assemble.py  diff_pages.py  merge_planner.py  merge_solver.py  merge_validator.py  planner.py  repair.py  solver.py  validator.py
python_worker/agent_platform/providers/: __init__.py  budget.py  config_loader.py  models.py  pricing.py  registry.py  router.py
python_worker/agent_platform/providers/adapters/: __init__.py  (+3 more)
python_worker/agent_platform/tools/: __init__.py  descriptor.py  registry.py  sandbox.py
python_worker/agent_platform/trace/: __init__.py  sse_bridge.py  store.py
python_worker/api/: main.py
python_worker/api/routers/: download.py  tasks.py  upload.py  workflows.py
python_worker/llm/: client.py  prompts.py
python_worker/llm/tools/: __init__.py  base.py  ppt_apply_style.py  ppt_screenshot.py  registry.py  svg_generator.py
python_worker/memory/: client.py  embeddings.py  models.py
python_worker/models/: __init__.py  ppt_state.py  workflow.py  workflow_def.py
python_worker/services/: parser.py  recomposer.py
python_worker/tests/: test_agent_registry.py  test_api.py  test_config.py  test_dag.py  test_emu.py  test_executors.py  test_graph.py  test_llm_client.py  test_memory.py  test_merge.py  test_models.py  test_nodes.py  test_orchestrator.py  test_parser.py  test_prompts.py  test_recomposer.py  test_tools.py  test_workflow_def.py  test_workflow_models.py
python_worker/tests/fixtures/: sample.pptx
python_worker/utils/: emu.py
python_worker/workflow/: agent_registry.py  dag.py  executors.py  graph.py  merge.py  nodes.py  orchestrator.py  sse_broadcaster.py
(+183 files in other folders)
